[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Sprites/car2.png" type="Texture" id=1]
[ext_resource path="res://assets/Objects/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 3 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 12, 12 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 12, 12 )
shape = SubResource( 1 )

[node name="ExhaustParticles" type="CPUParticles2D" parent="."]
position = Vector2( -50, 0 )
amount = 10
lifetime = 0.5
randomness = 1.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 20 )
direction = Vector2( -1, 0 )
spread = 13.85
gravity = Vector2( 0, 0 )
initial_velocity = 275.23
scale_amount = 13.79
color = Color( 0.239216, 0.239216, 0.239216, 0.109804 )

[node name="SmokeParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.5
emission_shape = 2
emission_rect_extents = Vector2( 10, 10 )
direction = Vector2( -1, 0 )
spread = 180.0
gravity = Vector2( 0, -200 )
initial_velocity = 45.87
scale_amount = 13.79
color = Color( 0.239216, 0.239216, 0.239216, 0.682353 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
